// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sms passwordless renders a captcha 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="social_buttons_pane"
    />
    <div
      data-__type="pane_separator"
    />
    <div
      data-__type="phone_number_pane"
    />
    <div
      data-__type="captcha_pane"
    />
  </div>
</DocumentFragment>
`;

exports[`sms passwordless renders correctly 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="social_buttons_pane"
    />
    <div
      data-__type="pane_separator"
    />
    <div
      data-__type="phone_number_pane"
    />
  </div>
</DocumentFragment>
`;
